# QNNResnet

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/qnnresnet/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: resnet_f32.raw  resnet_uint8.raw
app/src/main/cpp/: CMakeLists.txt  qnnresnet.cpp  qnnresnet.h
app/src/main/cpp/SampleApp/: CMakeLists.txt
app/src/main/cpp/SampleApp/src/: CMakeLists.txt  QnnSampleApp.cpp  SampleApp.hpp
app/src/main/cpp/SampleApp/src/PAL/src/linux/: FileOp.cpp
app/src/main/cpp/SampleApp/src/Utils/: BuildId.hpp  DynamicLoadUtil.cpp  DynamicLoadUtil.hpp  QnnSampleAppUtils.cpp  QnnSampleAppUtils.hpp
app/src/main/java/com/example/qnnresnet/: MainActivity.kt
app/src/main/java/com/example/qnnresnet/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/com/example/qnnresnet/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
